--- a/css/aggregate.less
+++ b/css/aggregate.less
@@ -1,4 +1,8 @@
 /*
  * @LastEditors: afei
- * @LastEditTime: 2021-10-22 15:47:01
+ * @LastEditTime: 2021-10-25 14:47:07
  */
+p {
+  font-size: 22px;
+  font-weight: bold;
+}
