样式文件优化

--- a/modules/interface-show/css/showInterface.less
+++ b/modules/interface-show/css/showInterface.less
@@ -1,5 +1,7 @@
-@charset "utf-8";
-
+/*
+ * @LastEditors: afei
+ * @LastEditTime: 2021-10-27 10:19:36
+ */
 body {
   //数字取新罗马字，汉字取微软雅黑
   font: normal normal 14px "Times New Roman", "Microsoft YaHei";
