--- a/css/aggregate.css
+++ b/css/aggregate.css
@@ -1,8 +1,1 @@
-/*
- * @LastEditors: afei
- * @LastEditTime: 2021-10-25 14:47:07
- */
-p {
-  font-size: 22px;
-  font-weight: bold;
-}
+p{font-size:22px;font-weight:bold}
