--- a/modules/carousel-replace/css/replaceCarousel.less
+++ b/modules/carousel-replace/css/replaceCarousel.less
@@ -1,5 +1,7 @@
-@charset "utf-8";
-
+/*
+ * @LastEditors: afei
+ * @LastEditTime: 2021-10-27 10:15:30
+ */
 //临时样式
 body {
   background: black;
@@ -11,7 +13,6 @@ body {
   height  : 232px;
   margin  : 0 auto;
   position: relative;
-  overflow: hidden;
 
   //控制按钮
   .controls {
@@ -58,7 +59,6 @@ body {
     width          : 100%;
     height         : 100%;
     padding        : 0;
-    margin         : 0;
     list-style-type: none;
     position       : relative;
 
@@ -67,6 +67,7 @@ body {
       position: absolute;
       width   : 100%;
       height  : 100%;
+      opacity : 0;
 
       //列表项上的附加内容
       a {
@@ -78,27 +79,6 @@ body {
         &>img {
           width : 100%;
           height: 100%;
-        }
-
-        .content {
-
-          //广告1
-          .advertisingJF {
-            position: absolute;
-            width   : 12%;
-            height  : 30%;
-            top     : 4%;
-            right   : 2%;
-          }
-
-          //广告2
-          .advertisingTJ {
-            position: absolute;
-            width   : 23%;
-            height  : 35%;
-            top     : 0;
-            left    : 0;
-          }
         }
       }
     }
@@ -113,17 +93,22 @@ body {
     margin         : 0;
     left           : 180px;
     width          : 140px;
-    height         : 5px;
+    height         : 20px;
 
     li {
-      background: rgba(255, 255, 255, 0.1);
-      width     : 20px;
-      height    : 100%;
-      position  : absolute;
-      cursor    : pointer;
+      background   : rgba(0, 0, 0, 0.2);
+      width        : 20px;
+      height       : 20px;
+      border-radius: 50%;
+      text-align   : center;
+      line-height  : 20px;
+      font-size    : 13px;
+      position     : absolute;
+      cursor       : pointer;
+      color        : #fff;
 
       &.active {
-        background: #3fbee5;
+        background: rgba(0, 0, 0, 0.6);
       }
     }
   }
